# lazychess

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs
src/chess/: game.rs
src/engine/: mod.rs  uci.rs
src/ui/: analysis.rs  board.rs  help.rs  input.rs  mod.rs  moves.rs
